fix a bug of closing client
when remote is closed, and no data remains to be sent to client, it goes
into infinite loop

--- a/src/Makefile
+++ b/src/Makefile
@@ -28,7 +28,7 @@ all: $(PROGNAME)
 $(PROGNAME): $(OBJS)
 	$(QUIET_LINK)$(CC) -o $(PROGNAME) $(CFLAGS_OPT) $(DEBUG) $(OBJS) $(CCLINK)
 	@echo
-	@echo "Make Complete. See README for how to use."
+	@echo "Make Complete. Read README for how to use."
 	@echo
 	@echo "Having problems with it? Send complains and bugs to dccmx@dccmx.com"
 	@echo
